/*
 * File : service.proto
 * Author : arrowfeng
 * Date : 2019/12/10
 */

syntax = "proto3";
package service;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service HelloWorld{
    rpc SayHello(HelloRequest) returns (HelloResponse);
}
